Add textColor setting

--- a/NameTags.csproj
+++ b/NameTags.csproj
@@ -48,6 +48,7 @@
     <ItemGroup>
         <Compile Include="Framework\Config.cs" />
         <Compile Include="Framework\Gui\NameTagsScreen.cs" />
+        <Compile Include="Framework\Gui\SettingColorScreen.cs" />
         <Compile Include="ModEntry.cs" />
         <Compile Include="Properties\AssemblyInfo.cs" />
     </ItemGroup>
